Adding friends and posting things

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -68,6 +68,9 @@ form input[type=text] {
 .chat .username {
     font-weight: 800;
 }
+span {
+    font-weight: bold;
+}
 
 .chat:hover {
     background-color: #ddd;
